<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Proyecto</string>
    <string name="id">ID</string>
    <string name="nombreCliente">Nombre completo</string>
    <string name="edadCliente">Edad</string>
    <string name="sexoCliente">Sexo</string>
    <string name="correoCliente">Correo electronico</string>
    <string name="contraseñaCliente">Contraseña</string>
    <string name="confirmaCliente">Confirmar contraseña</string>
    <string name="direccionCliente">Dirección</string>
    <string name="ciudadCliente">Ciudad</string>
    <string name="botonCliente">Registrar</string>
    <string name="botonCCliente">Cancelar</string>
    <string name="title_ConsultarCliente">Cancelar</string>
    <string name="mostrar_Cliente">Mostrar</string>
    <string name="idProducto">ID producto</string>
    <string name="nombreProducto">Nombre producto</string>
    <string name="descripcionProducto">Descripción</string>
    <string name="cantidadProducto">Cantidad</string>
    <string name="precioProducto">Precio</string>
    <string name="botonProducto">Agregar</string>
    <string name="idOferta">ID oferta</string>
    <string name="nombreOferta">Nombre oferta</string>
    <string name="precioOferta">Precio oferta</string>
    <string name="totalOfertas">Total ofertas</string>
    <string name="maximoClientes">Maximo clientes</string>
    <string name="fechaInicio">Fecha de inicio</string>
    <string name="fechaFin">Fecha de fin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
</resources>