<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AppBarLayout contiene el Toolbar y puede tener otros elementos -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Toolbar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#D33C3C"
            app:title="Registro Ofertas"
            app:titleTextColor="@android:color/white">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Contenido principal de la actividad -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Contenido principal -->
        <!-- Tu diseño de formulario aquí -->
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:background="#F4F4F4"
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:padding="30dp">

            <TextView
                android:id="@+id/LblidOferta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idOferta"
                android:textColor="#2B2B2B"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/TxtidOferta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LblidOferta"
                android:background="@drawable/estilo_borde_redondo"
                android:fontFamily="sans-serif-condensed-medium"
                android:inputType="text"
                android:textColor="#2B2B2B"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Este es de NOMBRE COMPLETO -->



            <TextView
                android:id="@+id/LblNombreOferta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TxtidOferta"
                android:text="@string/nombreOferta"
                android:textColor="#2B2B2B"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/TxtNombreOferta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LblNombreOferta"
                android:background="@drawable/estilo_borde_redondo"
                android:fontFamily="sans-serif-condensed-medium"
                android:inputType="text"
                android:textColor="#2B2B2B"
                android:textSize="24sp"
                android:textStyle="bold" />


            <!-- Este es de EDAD -->
            <TextView
                android:id="@+id/LbltotalOfertas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TxtNombreOferta"
                android:text="@string/totalOfertas"
                android:textColor="#2B2B2B"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/TxttotalOfertas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LbltotalOfertas"
                android:background="@drawable/estilo_borde_redondo"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#2B2B2B"
                android:textSize="24sp"
                android:textStyle="bold"
                android:inputType="number"
                android:digits="0123456789"/>

            <!-- Este es de CORREO -->
            <TextView
                android:id="@+id/LblmaximoClientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TxttotalOfertas"
                android:text="@string/maximoClientes"
                android:textColor="#2B2B2B"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/TxtmaximoClientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LblmaximoClientes"
                android:background="@drawable/estilo_borde_redondo"
                android:fontFamily="sans-serif-condensed-medium"
                android:inputType="number"
                android:textColor="#2B2B2B"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Este es de CONTRASEÑA -->
            <TextView
                android:id="@+id/LblfechaInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TxtmaximoClientes"
                android:text="@string/fechaInicio"
                android:textColor="#2B2B2B"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/TxtfechaInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LblfechaInicio"
                android:background="@drawable/estilo_borde_redondo"
                android:fontFamily="sans-serif-condensed-medium"
                android:inputType="date"
                android:textColor="#2B2B2B"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Este es de CONTRASEÑA -->
            <TextView
                android:id="@+id/LblfechaFin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TxtfechaInicio"
                android:text="@string/fechaFin"
                android:textColor="#2B2B2B"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"
                android:inputType="date"/>

            <EditText
                android:id="@+id/TxtfechaFin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LblfechaFin"
                android:background="@drawable/estilo_borde_redondo"
                android:fontFamily="sans-serif-condensed-medium"
                android:inputType="date"
                android:textColor="#2B2B2B"
                android:textSize="24sp"
                android:textStyle="bold" />


            <!-- Este es el boton de REGISTRAR -->
            <Button
                android:id="@+id/BtnRegistar"
                android:onClick="guardarOferta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TxtfechaFin"
                android:backgroundTint="#F1234F"
                android:text="@string/botonProducto"
                android:layout_centerVertical="false"
                android:layout_centerHorizontal="true"/>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>