<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- AppBarLayout contiene el Toolbar y puede tener otros elementos -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Toolbar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#D33C3C"
            app:title="Registro Productos"
            app:titleTextColor="@android:color/white">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Contenido principal de la actividad -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Contenido principal -->
        <!-- Tu diseño de formulario aquí -->
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:background="#F4F4F4"
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:padding="30dp">

            <TextView
                android:id="@+id/LblidProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonAtras"
                android:text="@string/idProducto"
                android:textColor="#2B2B2B"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/TxtidProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LblidProducto"
                android:background="@drawable/estilo_borde_redondo"
                android:fontFamily="sans-serif-condensed-medium"
                android:inputType="text"
                android:textColor="#2B2B2B"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Este es de NOMBRE COMPLETO -->



            <TextView
                android:id="@+id/LblNombreProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TxtidProducto"
                android:text="@string/nombreProducto"
                android:textColor="#2B2B2B"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/TxtNombreProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LblNombreProducto"
                android:background="@drawable/estilo_borde_redondo"
                android:fontFamily="sans-serif-condensed-medium"
                android:inputType="text"
                android:textColor="#2B2B2B"
                android:textSize="24sp"
                android:textStyle="bold" />


            <!-- Este es de EDAD -->
            <TextView
                android:id="@+id/Lbldescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TxtNombreProducto"
                android:text="@string/descripcionProducto"
                android:textColor="#2B2B2B"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Txtdescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Lbldescripcion"
                android:background="@drawable/estilo_borde_redondo"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#2B2B2B"
                android:textSize="24sp"
                android:textStyle="bold"
                android:inputType="text"/>

            <!-- Este es de CORREO -->
            <TextView
                android:id="@+id/Lblcantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Txtdescripcion"
                android:text="@string/cantidadProducto"
                android:textColor="#2B2B2B"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Txtcantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Lblcantidad"
                android:background="@drawable/estilo_borde_redondo"
                android:fontFamily="sans-serif-condensed-medium"
                android:inputType="number"
                android:textColor="#2B2B2B"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Este es de CONTRASEÑA -->
            <TextView
                android:id="@+id/Lblprecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Txtcantidad"
                android:text="@string/precioProducto"
                android:textColor="#2B2B2B"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Txtprecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Lblprecio"
                android:background="@drawable/estilo_borde_redondo"
                android:fontFamily="sans-serif-condensed-medium"
                android:inputType="number"
                android:textColor="#2B2B2B"
                android:textSize="24sp"
                android:textStyle="bold" />


            <!-- Este es el boton de REGISTRAR -->
            <Button
                android:id="@+id/BtnRegistar"
                android:onClick="guardarProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Txtprecio"
                android:backgroundTint="#F1234F"
                android:text="@string/botonProducto"
                android:layout_centerVertical="false"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/buttonAtras"
                android:onClick="atrasRegistroProductos"
                android:layout_width="66dp"
                android:layout_height="23dp"
                android:backgroundTint="#F9F9F9"
                android:drawableLeft="@drawable/flecha"

                android:text="Button" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>